fix horizontal scroll

--- a/src/app/styles/components/Header.scss
+++ b/src/app/styles/components/Header.scss
@@ -1,5 +1,5 @@
 .header {
-  width: 100vw;
+  // width: 100vw;
   min-width: 320px;
   display: flex;
   justify-content: space-between;
